# cleaner

./: .gitignore  Cargo.toml  README.md  build.rs
.agent/rules/: code-style.md
docs/: application_design.md
src/: app.rs  cache.rs  file_info.rs  lang.rs  main.rs  scanner.rs  utils.rs
src/actions/: cleaner.rs  duplicates.rs  mod.rs  sorter.rs
src/ui/: colors.rs  dialogs.rs  mod.rs  theme.rs  toolbar.rs  tree_view.rs
src/ui/components/: bread_crumb.rs  dialogs.rs  mod.rs  sidebar.rs  toolbar.rs  tree_view.rs
src/ui/pages/: cleanup.rs  duplicate_finder.rs  mod.rs  settings.rs
