[package]
name = "folder_cleaner"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
image = "0.25"
dirs = "6"
chrono = "0.4"
trash = "5"
open = "5"
rfd = "0.17.2"
sha2 = "0.10.9"
hex = "0.4.3"
rayon = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true # Xóa symbols để giảm dung lượng file thực thi (.exe)

[build-dependencies]
embed-resource = "3.0.6"
