[package]
name = "folder_cleaner"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33.3", default-features = false, features = [
    "glow",           # Render backend mặc định trên Windows
    "default_fonts",  # Phông chữ mặc định của egui
    "accesskit",      # Hỗ trợ accessibility
] }
image = { version = "0.25", default-features = false, features = ["png"] } # Chỉ cần đọc icon.png
dirs = "6"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
trash = "5"
open = "5"
rfd = "0.17.2"
sha2 = "0.10.9"
hex = "0.4.3"
rayon = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1"

[profile.release]
opt-level = 3     # Tối ưu hóa kích thước thay vì tốc độ (z > 3 cho size)
lto = true
codegen-units = 1
panic = 'abort'
strip = true       # Xóa symbols để giảm dung lượng file thực thi (.exe)

[build-dependencies]
embed-resource = "3.0.6"
